cmake_minimum_required(VERSION 3.19)
project(LEETCODE)

#add_subdirectory(twoSum)
#add_subdirectory(countItemsMatchingARule)
#add_subdirectory(mergeStringAlternatively)
#add_subdirectory(longestNiceSubstring)
#add_subdirectory(palindrome)
#add_subdirectory(longestPalindrome)
#add_subdirectory(arrayisSortedRotated)
#add_subdirectory(gcd)
#add_subdirectory(substring)
#add_subdirectory(anagram)
#add_subdirectory(fibnocci)
#add_subdirectory(maxRepeatedSubString)
#add_subdirectory(noOfRepeatedNo)
#add_subdirectory(countTheCarry)
#add_subdirectory(powerofX)
#add_subdirectory(longSubStrWORepeatChar)
#add_subdirectory(longestPalindromicSubStr)
#add_subdirectory(bitwiseEvenOrOdd)
add_subdirectory(bitwiseNoOf1Bits)
#add_subdirectory(matrixMultiplication)
#add_subdirectory(reverseLinkedList)
#add_subdirectory(longestSubSeqBwTwoStrings)
#add_subdirectory(bfsTrees)




#add_subdirectory(bitwisereverseTheBits)
#add_subdirectory(subConAllWords)
#add_subdirectory(repeatedSubstring)
#add_subdirectory(latestTimeByReplacingDigits)